crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__builtins__I028-read-count-accross-threads.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/builtins/I028-read-count-accross-threads
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "1\n" [Continue]
> "1\n" [Done]
outcome: Done
