crates/internal/brink-test-harness/tests/snapshots/oracle_snapshots__tier2__builtins__I029-read-count-dot-seperated-path.snap
---
source: crates/internal/brink-test-harness/tests/oracle_snapshots.rs
expression: case_snapshot
---
case: tier2/builtins/I029-read-count-dot-seperated-path
oracle: 1, brink: 1, matched: 1
passing: 1/1

=== episode [] === PASS
> "hi\n" [Continue]
> "hi\n" [Continue]
> "hi\n" [Continue]
> "3\n" [Done]
outcome: Done
